# car_sensors

./: .dockerignore  .gitignore  Cargo.toml  README.md  docker-compose.yml
.github/workflows/: ingest-build.yml
android/: settings.gradle.kts
android/app/: build.gradle.kts
android/app/src/androidTest/java/com/anonymus09/carsensors/: ExampleInstrumentedTest.kt
android/app/src/main/: AndroidManifest.xml
android/app/src/main/java/com/anonymus09/carsensors/: BootReceiver.kt  MainActivity.kt  MainViewModel.kt  TelemetryForegroundService.kt
android/app/src/main/java/com/anonymus09/carsensors/data/: AppDatabase.kt  TelemetryDao.kt  TelemetrySampleEntity.kt
android/app/src/main/java/com/anonymus09/carsensors/ui/theme/: Color.kt  Theme.kt  Type.kt
android/app/src/main/java/com/anonymus09/carsensors/util/: AppConfig.kt  DeviceIdProvider.kt
android/app/src/main/java/com/anonymus09/carsensors/work/: UploadWorker.kt  WifiUploadScheduler.kt
android/app/src/main/res/values/: strings.xml  themes.xml
android/app/src/test/java/com/anonymus09/carsensors/: ExampleUnitTest.kt
android/gradle/: libs.versions.toml
android/gradle/wrapper/: gradle-wrapper.properties
db/migrations/: 20260614153043_add_known_devices.sql
ingest/: Cargo.toml  Dockerfile
ingest/migrations/: 20260614165204_add_barometer_to_telemetry_samples.sql
ingest/src/: main.rs
ingest/src/db/: mod.rs  telemetry_sample.rs
ingest/src/helpers/: middleware.rs  mod.rs
ingest/src/models/: device_auth.rs  mod.rs  telemetry_sample.rs
ingest/src/routes/: device.rs  mod.rs  telemetry.rs
server/: .env  Cargo.toml
server/migrations/: 20260614151604_init_telemetry.sql
server/src/: main.rs
server/src/helpers/: error.rs  middleware.rs  mod.rs  pg.rs  redis.rs
server/src/models/: telemetry_sample.rs
server/src/routes/: mod.rs  telemetry.rs
shared/: Cargo.toml
shared/src/: lib.rs  pg.rs
tools/: docker-compose.yml
