[package]
name = "shared"
version = "0.1.0"
edition = "2024"

[dependencies]
redis = { version = "1.0", features = [
    "connection-manager",
    "tls-rustls-insecure",
    "tokio-rustls-comp",
], default-features = false }
sqlx = { version = "0.9", features = [
    "runtime-tokio",
    "postgres",
    "derive",
    "chrono",
    "macros",
] }
tracing = "0.1"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.0", features = ["full"] }
